# qbar

./: .gitignore  ChangeLog.md  README.md  default.nix  flake.nix  ghcid  ghcid-wrapper  install  load-all.ghci  package.yaml  qbar.cabal  run-ghci.sh  run-ghcid.sh  run-sway  shell.nix  stack.yaml
app/: Main.hs
qbar/: LICENSE  qbar.cabal
qbar/app/: Main.hs
qbar/src/QBar/: BlockHelper.hs  BlockOutput.hs  Blocks.hs  Cli.hs  Color.hs  ControlSocket.hs  Core.hs  DefaultConfig.hs  Host.hs  Pango.hs  Prelude.hs  Server.hs  TagParser.hs  Theme.hs  Time.hs  Utils.hs
qbar/src/QBar/Blocks/: Battery.hs  CpuUsage.hs  Date.hs  DiskUsage.hs  NetworkManager.hs  Pipe.hs  Qubes.hs  Script.hs  Squeekboard.hs  Utils.hs
qbar/src/QBar/Qubes/: AdminAPI.hs
src/: BasePrelude.hs  Prelude.hs
src/QBar/: BlockHelper.hs  BlockOutput.hs  BlockText.hs  Blocks.hs  Cli.hs  Color.hs  Configuration.hs  ControlSocket.hs  Core.hs  DefaultConfig.hs  Filter.hs  Host.hs  Pango.hs  Server.hs  TagParser.hs  Theme.hs  Themes.hs  Time.hs  Util.hs  Utils.hs
src/QBar/Blocks/: Battery.hs  CpuUsage.hs  Date.hs  DiskUsage.hs  NetworkManager.hs  Pipe.hs  Qubes.hs  Script.hs  Squeekboard.hs  Utils.hs
src/QBar/Qubes/: AdminAPI.hs
