cabal-version: 3.0

name:           qbar
version:        0.1.0.0
author:         Jens Nolte
maintainer:     Jens Nolte
copyright:      2019 Jens Nolte
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

--source-repository head
--  type: git
--  location: https://git.c3pb.de/jens/qbar.git

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    -- Enable once 9.0.1 is required
    --LexicalNegation
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

common shared-executable-properties
  import: shared-properties
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0"

library
  import: shared-properties
  build-depends:
    aeson,
    async,
    attoparsec,
    base >=4.7 && <5,
    binary,
    bytestring,
    colour,
    concurrent-extra,
    containers,
    dbus,
    directory,
    filepath,
    gitrev,
    hostname,
    lens,
    mtl,
    network,
    optparse-applicative,
    pipes,
    pipes-aeson,
    pipes-concurrency,
    pipes-network,
    pipes-parse,
    pipes-safe,
    random,
    sorted-list,
    stm,
    text,
    time,
    typed-process,
    unix,
    unordered-containers,
  exposed-modules:
    QBar.BlockHelper
    QBar.BlockOutput
    QBar.Blocks
    QBar.Blocks.Battery
    QBar.Blocks.CpuUsage
    QBar.Blocks.Date
    QBar.Blocks.DiskUsage
    QBar.Blocks.NetworkManager
    QBar.Blocks.Pipe
    QBar.Blocks.Qubes
    QBar.Blocks.Script
    QBar.Blocks.Squeekboard
    QBar.Blocks.Utils
    QBar.Cli
    QBar.Color
    QBar.ControlSocket
    QBar.Core
    QBar.DefaultConfig
    QBar.Host
    QBar.Pango
    QBar.Prelude
    QBar.Qubes.AdminAPI
    QBar.Server
    QBar.TagParser
    QBar.Theme
    QBar.Time
    QBar.Utils
  hs-source-dirs:
    src
  default-extensions:
    MultiWayIf

executable qbar
  import: shared-executable-properties
  main-is: Main.hs
  other-modules:
    Paths_qbar
  hs-source-dirs:
    app
  build-depends:
    aeson,
    async,
    attoparsec,
    base >=4.7 && <5,
    binary,
    bytestring,
    colour,
    concurrent-extra,
    containers,
    dbus,
    directory,
    filepath,
    gitrev,
    hostname,
    lens,
    mtl,
    network,
    optparse-applicative,
    pipes,
    pipes-aeson,
    pipes-concurrency,
    pipes-network,
    pipes-parse,
    pipes-safe,
    qbar,
    random,
    sorted-list,
    stm,
    text,
    time,
    typed-process,
    unix,
    unordered-containers,

test-suite qbar-test
  import: shared-executable-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_qbar
  hs-source-dirs:
    test
  build-depends:
    base >=4.7 && <5,
    qbar,